--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="modal-container">
           <div class="modal">
             <h2 class="header" id="modal-header" tabindex="0">Ejemplo de un proyecto mio</h2>
-            <img src="images/project1.png" class="modal-project-image" alt="pantallazo del proyecto">
+            <img src="images/project1.png" class="modal-project-image" alt="pantallazo del proyecto"/>
             <button class="modal-button">Cerrar</button>
           </div>
         </div>
